Learned about bootstrap carousel and cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 #title {
-  background-color: #ff4c68
+  background-color: #ff4c68;
   /* color: #ffff; */
 }
 
@@ -81,4 +81,42 @@ p{
 
 .feature-icon:hover{
   color: #ff4c68;
+}
+
+/* testmonial */
+
+#testimonials{
+  padding: 5% 0;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.carousel-item{
+  padding: 0 15%;
+}
+
+h2{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  font-height: 1.5;
+}
+
+.testimonial-img{
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+/* press */
+#press{
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-img{
+  width: 15%;
+  margin: 20px 20px 15px
 }
