--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,17 @@ h1{
   font-weight: 900;
 }
 
+/* media query */
+@media (max-width: 1028px) {
+  .title-image{
+    position: static;
+    transform: rotate(0);
+  }
+  #title{
+    text-align: center;
+  }
+
+}
 .container-fluid{
   padding: 3% 15%;
 }
@@ -49,12 +60,15 @@ body{
   display: block;
   width: 60%;
   margin: auto;
+  /* position: absolute; */
   /* transform: rotate(25deg); */
 }
 
 /* features */
 #features{
   padding: 7% 15%;
+  background-color: white;
+  /* position: relative; */
 }
 
 .feature-box{
@@ -119,4 +133,15 @@ h2{
 .press-img{
   width: 15%;
   margin: 20px 20px 15px
+}
+
+/* pricing */
+#pricing{
+  padding: 5% 10%;
+  text-align: center;
+}
+
+.pricing-col{
+  padding: 3% 2%;
+
 }
